<resources>
    <string name="app_name">WiFi Direct and Nearby Share</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Select Image</string>
    <string name="get_file_button1">Select DOC</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="connection_type_host">Host</string>
    <string name="connection_type_client">Client</string>

    <string name="service_id">nearby_service_id</string>



    <string name="error_missing_permissions">Cannot start without required permissions</string>

    <string name="local_endpoint_name">Local endpoint name: %s</string>

    <string name="send_bytes">Send Bytes</string>
    <string name="send_image">Send IMG</string>
    <string name="send_file">Send PDF</string>
    <string name="start_discovery">START DISCOVERY</string>
    <string name="start_discovery1">END FILE TRANSFER CONNECTION</string>
    <string name="exit_app">CLOSE</string>
</resources>