<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/local_endpoint_name"
        style="@style/StatusText"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/bytes_received"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="60sp"
        android:visibility="gone"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="160dp"/>


    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSendBytesButtonClicked"
        android:text="@string/send_bytes"
        android:visibility="gone"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/onSendFileButtonClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_image" />

        <Button
            android:id="@+id/onSendFileButtonClicked1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_file" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/timeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="Time-Stamp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageV1"
            android:layout_width="300dp"
            android:layout_height="168dp"

            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:visibility="gone"/>

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onStartButtonClick"
        android:text="@string/start_discovery"
        android:backgroundTint="@android:color/background_dark"
        android:textColor="@android:color/background_light"/>

    <Button
        android:id="@+id/endFileTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_discovery1"
        android:backgroundTint="@android:color/background_dark"
        android:textColor="@android:color/background_light"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStopButtonClick"
        android:text="@string/exit_app"
        android:backgroundTint="@android:color/background_dark"
        android:textColor="@android:color/background_light"/>

</LinearLayout>
